--- a/public/index1.html
+++ b/public/index1.html
@@ -12,7 +12,7 @@ Author URL: http://w3layouts.com
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Homish a Real Estate Category Bootstrap Responsive Template | Home :: W3layouts</title>
+  <title>Chandak Group</title>
   <!-- google fonts -->
   <link href="http://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap" rel="stylesheet">
   <link href="http://fonts.googleapis.com/css2?family=Allerta+Stencil&amp;display=swap" rel="stylesheet">
@@ -931,7 +931,7 @@ RIGHT SIDEBAR TOGGLE SECTION
           </div>
           <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
             <div class="columns text-lg-left text-center">
-              <p>&copy; 2020 Homish. All rights reserved.Design by <a href="https://w3layouts.com/" target="_blank">
+              <p>&copy; 2020 Dhruv. All rights reserved.Design by <a href="https://w3layouts.com/" target="_blank">
                   W3Layouts</a>
               </p>
             </div>
