--- a/public/index.html
+++ b/public/index.html
@@ -188,6 +188,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
     <title>Chandak GreenAiry | 1&2 BHK with Jodi Options in Borivali, WEH - Chandak Group</title>
     
   </head>
@@ -279,7 +280,7 @@
     /></noscript>
     <!-- End Meta Pixel Code -->
 
-  <script src="../../../../../../../m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+  <!-- <script src="../../../../../../../m.servedby-buysellads.com/monetization.js" type="text/javascript"></script> -->
   <script>
   (function(){
     if(typeof _bsa !== 'undefined' && _bsa) {
@@ -322,24 +323,24 @@
        ga('require', 'urlChangeTracker');
        ga('send', 'pageview');
      </script>
-  <script async src='/assets/js/autotrack.js'></script>
+  <!-- <script async src='/assets/js/autotrack.js'></script> -->
   
   
 
     </script>
     <script>
       // When the user scrolls down 20px from the top of the document, show the button
-      window.onscroll = function () {
-        scrollFunction()
-      };
+      // window.onscroll = function () {
+      //   scrollFunction()
+      // };
 
-      function scrollFunction() {
-        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-          document.getElementById("movetop").style.display = "block";
-        } else {
-          document.getElementById("movetop").style.display = "none";
-        }
-      }
+      // function scrollFunction() {
+      //   if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+      //     document.getElementById("movetop").style.display = "block";
+      //   } else {
+      //     document.getElementById("movetop").style.display = "none";
+      //   }
+      // }
 
       // When the user clicks on the button, scroll to the top of the document
       function topFunction() {
@@ -349,11 +350,11 @@
     </script>
     <!-- //move top -->
     <script>
-      $(function () {
-        $('.navbar-toggler').click(function () {
-          $('body').toggleClass('noscroll');
-        })
-      });
+      // $(function () {
+      //   $('.navbar-toggler').click(function () {
+      //     $('body').toggleClass('noscroll');
+      //   })
+      // });
     </script>
   </section>
   <!-- //footer -->
@@ -361,7 +362,7 @@
 <!--//w3l-footer-29-main-->
 <!-- Template JavaScript -->
 <script src="assets/js/jquery-3.3.1.min.js"></script>
-<script src="assets/js/theme-change.js"></script>
+<!-- <script src="assets/js/theme-change.js"></script> -->
 <script src="assets/js/owl.carousel.js"></script>
 <!-- script for banner slider-->
 <script>
@@ -499,9 +500,9 @@
 </script>
 <!--//MENU-JS-->
 
-<script src="assets/js/bootstrap.min.js"></script>
+<!-- <script src="assets/js/bootstrap.min.js"></script> -->
 
 
 
-<div id = "v-w3layouts"></div><script>(function(v,d,o,ai){ai=d.createElement('script');ai.defer=true;ai.async=true;ai.src=v.location.protocol+o;d.head.appendChild(ai);})(window, document, '../../../../../../../a.vdo.ai/core/v-w3layouts/vdo.ai.js');</script> 
+<!-- <div id = "v-w3layouts"></div><script>(function(v,d,o,ai){ai=d.createElement('script');ai.defer=true;ai.async=true;ai.src=v.location.protocol+o;d.head.appendChild(ai);})(window, document, '../../../../../../../a.vdo.ai/core/v-w3layouts/vdo.ai.js');</script>  -->
 </html>
