--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="./assets/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="facebook-domain-verification" content="ypyn8rhpksx6g6wjjqcbjw09v7qv35" />
     <meta
       name="description"
       content="Web site created using create-react-app"
